change some css

--- a/dark.css
+++ b/dark.css
@@ -266,7 +266,7 @@ textarea {
 
 /* 引用块 */
 .output blockquote {
-  border-left: 4px solid #4c51bf;
+  border-left: 4px solid #989595;
   padding-left: 16px;
   margin-left: 0;
   margin-right: 0;
