--- a/light.css
+++ b/light.css
@@ -266,7 +266,7 @@ textarea {
 
 /* 引用块 */
 .output blockquote {
-  border-left: 4px solid #4f46e5;
+  border-left: 4px solid #989595;
   padding-left: 16px;
   margin-left: 0;
   margin-right: 0;
